Update title for property service calculator

--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>External Property Makeover Calculator | Home Repairs 4U</title>
+<title>External Property Service Calculator | Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp" />
 
