--- a/test.html
+++ b/test.html
@@ -161,9 +161,6 @@ This calculator is for our full external property services. Only the core proper
 <option value="semi">Semi-detached</option>
 <option value="detached">Detached</option>
 </select>
-<p class="small">
-We ask this to understand your property structure, access requirements, and to allow accurate pricing for optional services.
-</p>
 
 <label for="bedrooms">Number of Bedrooms</label>
 <select id="bedrooms" required>
@@ -195,21 +192,17 @@ We ask this to understand your property structure, access requirements, and to a
 <p class="small">Leave blank if painting is not required.</p>
 <details>
 <summary>More about Exterior Painting</summary>
-<p>
-We provide professional exterior painting for your property. This includes surface preparation, priming, and application of weather-resistant paint. We cover all elevations and provide colour advice to enhance kerb appeal.
-</p>
-<p>
-Optional extras include: textured finishes, protective coatings, and maintenance tips to prolong the life of your paintwork.
-</p>
+<p>We provide professional exterior painting for your property. This includes surface preparation, priming, and application of weather-resistant paint. We cover all elevations and provide colour advice to enhance kerb appeal.</p>
+<p>Optional extras include: textured finishes, protective coatings, and maintenance tips to prolong the life of your paintwork.</p>
 </details>
 
-<label for="front">Front property width metres or large strides</label>
+<label for="front">Front property width (m)</label>
 <input type="number" id="front" step="0.1">
-<label for="rear">Rear property width metres or large strides</label>
+<label for="rear">Rear property width (m)</label>
 <input type="number" id="rear" step="0.1">
-<label for="sideLeft">Left property width metres or large strides</label>
+<label for="sideLeft">Left property width (m)</label>
 <input type="number" id="sideLeft" step="0.1">
-<label for="sideRight">Right property width metres or large strides</label>
+<label for="sideRight">Right property width (m)</label>
 <input type="number" id="sideRight" step="0.1">
 
 <label for="surface">Wall Surface For Painting</label>
@@ -223,19 +216,22 @@ Optional extras include: textured finishes, protective coatings, and maintenance
 
 <h3>Access Required</h3>
 <p class="small">Select ladders if unsure!</p>
-<label><input type="radio" name="access" value="0" checked> Ladders</label>
-<label><input type="radio" name="access" value="450"> Scaffold tower</label>
-<label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
-<label><input type="radio" name="access" value="1200"> Full scaffold</label>
+<label><input type="radio" name="access" id="accessLadders" value="0" checked> Ladders</label>
+<label><input type="radio" name="access" id="accessTower" value="450"> Scaffold tower</label>
+<label><input type="radio" name="access" id="accessConservatory" value="750"> Scaffold over conservatory</label>
+<label><input type="radio" name="access" id="accessFull" value="1200"> Full scaffold</label>
 
 <h3 class="optional-title">Optional Guttering</h3>
 <p class="small">Measure in metres or large strides under wherever you have guttering.</p>
 <div class="extra-group">
 <label><input type="checkbox" id="gc"> Gutter clearing</label>
+<label for="gcm">Length (m)</label>
 <input type="number" id="gcm">
 <label><input type="checkbox" id="gw"> Gutter & fascia washing</label>
+<label for="gwm">Length (m)</label>
 <input type="number" id="gwm">
 <label><input type="checkbox" id="gr"> Gutter replacement</label>
+<label for="grm">Length (m)</label>
 <input type="number" id="grm">
 </div>
 
