--- a/services/upvc-restoration.html
+++ b/services/upvc-restoration.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17853901540">
+</script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'AW-17853901540');
+</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>uPVC Restoration & Cleaning in Askern DN6 | Windows, Doors, Gutters & Conservatories</title>
