--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@ box-shadow: 0 0 20px #000;
 <a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
 <br>
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+<a href="tel:07735873694"
+class="call-btn"
+onclick="return gtag_report_conversion('tel:07735873694');">
+📞 Call Now: 07735 873694
+</a>
 </header>
 
 <main>
@@ -325,7 +329,11 @@ loading="lazy">
 </main>
 
 <footer>
-<p>📞 Call 07735 873694</p>
+<a href="tel:07735873694"
+class="call-btn"
+onclick="return gtag_report_conversion('tel:07735873694');">
+📞 Call Now: 07735 873694
+</a>
 <div>
 <a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
 <a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
