--- a/services/upvc-restoration.html
+++ b/services/upvc-restoration.html
@@ -187,7 +187,357 @@ loading="eager">
 style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
 <br>
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17853901540">
+</script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'AW-17853901540');
+</script>
+
+<script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17853901540/OgEcCPrext0bEOTVs8FC',
+      'event_callback': callback
+  });
+  return false;
+}
+</script>
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/">
+<meta name="description" content="Home Repairs 4U provides professional exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration in Askern DN6 and nearby areas. Call 07735 873694.">
+
+<link rel="preload" as="image" href="/images/logo.webp" />
+
+<style>
+/* ========== Base styles ========== */
+body{
+margin:0;
+padding:0;
+font-family:Arial, sans-serif;
+background:#f9f9f9;
+color:#222;
+line-height:1.65;
+}
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+.logo{
+max-height:90px;
+width:auto;
+}
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{ background:#333; }
+main{
+max-width:900px;
+margin:0 auto;
+background:#fff;
+padding:25px 15px;
+}
+h1,h2,h3{ color:#111; }
+.service-btn{
+display:inline-block;
+margin-top:15px;
+padding:12px 24px;
+background:#000;
+color:#fff;
+font-size:18px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.service-btn:hover{ background:#333; }
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+/* ========== Lightbox styles ========== */
+.lightbox {
+display: none;
+position: fixed;
+z-index: 9999;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background: rgba(0,0,0,0.85);
+align-items: center;
+justify-content: center;
+}
+.lightbox img {
+max-width: 95%;
+max-height: 95%;
+border-radius: 6px;
+box-shadow: 0 0 20px #000;
+}
+.lightbox:target { display: flex; }
+</style>
+
+<!-- Business Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Repairs 4U",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"url":"https://homerepairs4u.com/",
+"telephone":"+447735873694",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"postalCode":"DN6",
+"addressRegion":"South Yorkshire",
+"addressCountry":"GB"
+},
+"description":"Professional home services in Askern DN6 including exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration.",
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
+"geoRadius":16093
+},
+"openingHoursSpecification":[{
+"@type":"OpeningHoursSpecification",
+"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+"opens":"07:00",
+"closes":"20:00"
+}],
+"makesOffer":[
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Exterior Decorating"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Fence Installation"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Garden Maintenance"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Gutter Replacement"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"Pressure Washing"}},
+{"@type":"Offer","itemOffered":{"@type":"Service","name":"uPVC Restoration"}}
+]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"Which areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"We serve Askern DN6 and a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick, Bentley, and surrounding villages."}},
+{"@type":"Question","name":"Are your services insured?","acceptedAnswer":{"@type":"Answer","text":"Yes, all our services are fully insured to ensure peace of mind and reliable workmanship."}},
+{"@type":"Question","name":"Can I book multiple services at the same time?","acceptedAnswer":{"@type":"Answer","text":"Yes, we can schedule multiple services together for convenience and efficiency."}},
+{"@type":"Question","name":"Do you offer free consultations?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide free consultations to assess your requirements and give accurate quotes."}}
+]
+}
+</script>
+
+</head>
+<body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
+<div style="text-align:center; margin-top:10px;">
+<a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+<br>
+<a href="tel:07735873694"
+class="call-btn"
+onclick="return gtag_report_conversion('tel:07735873694');">
+📞 Call Now: 07735 873694
+</a>
+</header>
+
+<main>
+
+<h1>Welcome to Home Repairs 4U – Professional Home Services in Askern DN6</h1>
+
+<p>
+At <strong>Home Repairs 4U</strong> we provide expert home and garden services across Askern DN6 and surrounding areas. From exterior decorating and fencing to guttering, pressure washing and uPVC restoration — our experienced, insured team delivers high-quality workmanship and lasting results.
+</p>
+
+<!-- Exterior Decorating -->
+<h2>Exterior Decorating</h2>
+<p>
+Our <strong>exterior decorating</strong> service refreshes brickwork, cladding, fences and railings using weather-resistant paints and careful surface preparation (clean, sand, prime). We help with colour selection and finishes to ensure a durable, attractive result that enhances kerb appeal.
+</p>
+
+<!-- Decorating Lightbox -->
+<a href="#decorating-lightbox">
+<img src="/images/house-before-after.webp"
+alt="Exterior decorating before and after example"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="decorating-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/house-before-after.webp" alt="Exterior decorating before and after example enlarged">
+</a>
+</div>
+
+<a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
+
+<!-- Fence Installation -->
+<h2>Fence Installation</h2>
+<p>
+We install and repair all types of timber fencing — closeboard, feather edge, lap panels, decorative panels and bespoke solutions. Posts are set securely and panels fitted to provide strength, privacy and a neat finish. We also repair storm damage and fit gates to measure.
+</p>
+
+<!-- Fence Lightbox -->
+<a href="#fence-lightbox">
+<img src="/images/fence-before-after.webp"
+alt="Fence installation before and after example"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="fence-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/fence-before-after.webp" alt="Fence installation before and after example enlarged">
+</a>
+</div>
+
+<a href="/services/fence-installation.html" class="service-btn">View Fence Installation</a>
+
+<!-- Garden Maintenance -->
+<h2>Garden Maintenance</h2>
+<p>
+From one-off tidy-ups to regular maintenance and landscaping, we offer lawn care, hedge trimming, weeding, planting, turfing, patios and raised beds. We create practical, low-maintenance gardens that look great year-round.
+</p>
+
+<a href="#garden-lightbox">
+<img src="/images/gardening.webp"
+alt="Regular and one off gardening services "
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="garden-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/gardening.webp" alt="Regular and one off gardening services Askern Doncaster">
+</a>
+</div>
+<a href="/services/garden.html" class="service-btn">View Garden Services</a>
+
+<!-- Guttering -->
+<h2>Gutter Replacement</h2>
+<p>
+Proper guttering protects your property from water damage. We replace gutters, repair leaks, maintain downpipes and restore fascias and soffits using durable, weather-resistant products.
+</p>
+<p>
+Our guttering services are available across multiple local areas.
+See all locations we cover on our
+<a href="/services/service-areas.html">service areas page</a>.
+</p>
+
+<a href="#guttering-lightbox">
+<img src="/images/gutter-repairs.webp"
+alt="Gutter cleaning, clearing, repairs and replacement Doncaster."
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="guttering-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/gutter-repairs.webp" alt="Gutter cleaning, clearing, repairs and replacement Doncaster example enlarged">
+</a>
+</div>
+
+<a href="/services/guttering.html" class="service-btn">View Gutter Services</a>
+
+<!-- Pressure Washing -->
+<h2>Pressure Washing</h2>
+<p>
+Our pressure washing refreshes driveways, patios, decking, paths and brickwork by removing algae, moss and staining — improving safety and kerb appeal.
+</p>
+
+<a href="#pressure-lightbox">
+<img src="/images/pressure-washing.webp"
+alt="Exterior pressure washing service Askern Doncaster"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="pressure-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/pressure-washing.webp" alt="Exterior pressure washing service Askern Doncaster example enlarged">
+</a>
+</div>
+
+<!-- uPVC Restoration -->
+<h2>uPVC Restoration</h2>
+<p>
+We restore uPVC windows, doors and conservatories using professional products and techniques to remove discolouration and grime without harming seals or frames.
+</p>
+
+<a href="#upvc-lightbox">
+<img src="/images/upvc.webp"
+alt="uPVC facia, gutter, framework, window frames, and conservatory valets. "
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="upvc-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/upvc.webp" alt="uPVC facia, gutter, framework, window frames, and conservatory valets. Example enlarged">
+</a>
+</div>
+<a href="/services/upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
+
+</main>
+
+<footer>
+<a href="tel:07735873694"
+class="call-btn"
+onclick="return gtag_report_conversion('tel:07735873694');">
+📞 Call Now: 07735 873694
+</a>
+<div>
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
+<br><br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">Facebook</a>
+<br><br>
+© Home Repairs 4U | Service Areas, Doncaster
+</div>
+</footer>
+
+</body>
+</html>
 </header>
 
 <main>
