--- a/head-foot.html
+++ b/head-foot.html
@@ -75,7 +75,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- ✅ FOOTER -->
 <footer class="site-footer">
-© Home Repairs 4U | Fencing • Gate Fitting • Repairs • Sheds • Timber Storage | Askern DN6 | Call 07735 873694
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
 
 <div class="footer-services">
 <p style="color: white;">Our Services:</p>
