--- a/head-foot.html
+++ b/head-foot.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>ADD TITLE</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/">
+<meta name="description" content="ADD META">
+
+<link rel="preload" as="image" href="/images/logo.webp" />
 <style>
 /* HEADER STYLING */
 header{
