--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -1,5 +1,20 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<title>Exterior House Painting in Askern DN6 | Home Repairs 4U</title>
+
+<link rel="canonical" href="https://homerepairs4u.com/services/Exterior-decorating.html">
+<link rel="icon" href="/favicon.png" type="image/png">
+
+<meta name="description" content="Professional exterior house painting in Askern DN6. Home Repairs 4U paints walls, render, woodwork, doors and frames. Call 07735 873694 for a free quote.">
+
+<link rel="preload" as="image" href="/images/logo.webp" />
+
 <style>
-/* HEADER STYLING */
+/* HEADER */
 header{
 text-align:center;
 padding:25px 10px;
@@ -25,9 +40,24 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
+
 .call-btn:hover{
 background:#333;
 color:#fff;
+}
+
+/* MAIN */
+main{
+max-width:900px;
+margin:40px auto;
+padding:0 15px;
+font-family:Arial, sans-serif;
+line-height:1.7;
+color:#222;
+}
+
+h1, h2{
+color:#000;
 }
 
 /* FOOTER */
@@ -41,30 +71,36 @@ font-size:14px;
 }
 
 .footer-services{
-background-color: black;
-padding: 20px;
-text-align: center;
-margin-top: 15px;
+background-color:black;
+padding:20px;
+text-align:center;
+margin-top:15px;
 }
 
 .footer-services a{
-color: white;
-margin: 0 10px;
+color:white;
+margin:0 10px;
+text-decoration:none;
 }
 </style>
+</head>
 
+<body>
 
-<!-- ✅ HEADER -->
+<!-- HEADER -->
 <header>
 <img src="/images/logo.webp"
 alt="Home Repairs 4U logo"
 class="logo"
-width="600" height="200"
+width="600"
+height="200"
 loading="eager">
 
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+<div style="margin-top:10px;">
+<a href="/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
+Home
+</a>
 </div>
 
 <br>
@@ -72,13 +108,43 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
+<!-- MAIN CONTENT -->
+<main>
+<h1>Exterior House Painting in Askern DN6</h1>
 
-<!-- ✅ FOOTER -->
+<p>
+Home Repairs 4U provides professional <strong>exterior house painting in Askern DN6</strong>, helping homeowners protect and refresh their property.
+A high-quality exterior paint finish not only improves kerb appeal but also protects walls and woodwork from rain, frost, and everyday wear.
+</p>
+
+<p>
+We carry out all aspects of exterior house painting, including masonry, render, and exterior woodwork.
+Every job begins with careful preparation such as cleaning, sanding, minor repairs, and priming to ensure the paint adheres properly and lasts longer.
+We use durable exterior paints designed for the UK climate, giving your home a smart and long-lasting finish.
+</p>
+
+<p>
+Our services include painting exterior walls, window frames, doors, soffits, fascias, and other exposed woodwork.
+Whether you need a full repaint or maintenance painting, we tailor our service to suit your property and budget.
+</p>
+
+<p>
+As a reliable local tradesman, Home Repairs 4U takes pride in clean workmanship, clear communication, and competitive pricing.
+We work efficiently and respectfully, delivering excellent results with minimal disruption.
+</p>
+
+<p style="font-weight:bold;">
+For trusted exterior house painters in Askern DN6, call
+<a href="tel:07735873694">07735 873694</a> for a free quote.
+</p>
+</main>
+
+<!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 
 <div class="footer-services">
-<p style="color: white;">Our Services:</p>
+<p>Our Services:</p>
 <a href="/services/Exterior-decorating.html">Exterior Decorating</a>
 <a href="/services/garden.html">Garden</a>
 <a href="/services/guttering.html">Guttering</a>
@@ -86,3 +152,6 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
+
+</body>
+</html>
